--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<link rel="shortcut icon" type="image/x-icon" href="images/logo.png">
 	<link rel="stylesheet" href="style.css" media="screen">
 	<link rel="stylesheet" href="Carousel.css">
-  
+
+
 	<title>ПРОКАТ СПОРТИВНЫХ ТРЕНАЖЕРОВ В МИНСКЕ</title>
   <meta property="og:title" content="ПРОКАТ СПОРТИВНЫХ ТРЕНАЖЕРОВ В МИНСКЕ">
   <meta property="og:site_name" content="ПРОКАТ СПОРТИВНЫХ ТРЕНАЖЕРОВ В МИНСКЕ">
@@ -14,7 +15,7 @@
   <meta property="og:image" content="http://sportzaldoma.by/images/logo.png">
   <meta name="Description" content="Мы занимаемся прокатом спортивных тренажеров в Минске. У нас вы можете взять в аренду беговую дорожку, эллипсоидный тренажер, велотренажер, а так же другие тренажеры. Доставка по Минску. Все тренажеры новые, модели последнего года.">
 
-  <meta name="Keywords" content="аренда беговой дорожки, аренда беговой дорожки минск, бег на беговой дорожке, бега на беговой дорожке, бега дорожка, бегова дорожка, беговая дорожка, беговая дорожка в домашних условиях, беговая дорожка для дома, беговая дорожка для дома аренда, беговая дорожка для дома недорого, беговая дорожка для дома прокат, беговая дорожка для дома спортдоставка, беговая дорожка для квартиры, беговая дорожка или эллиптический тренажер, беговая дорожка с доставкой, беговая дорожка housefit, беговая дорожка nordictrack, беговая дорожка sport, беговая дорожка t, беговая дорожка бу, беговая дорожка домой, беговая дорожка минск, беговая дорожка минск цены, беговая дорожка мышцы, беговая дорожка напрокат, беговая дорожка напрокат в минске, беговая дорожка напрокат в минске с доставкой, беговая дорожка недорого, беговая дорожка похудей, беговая дорожка рб, беговая дорожка сайты, беговая дорожка сколько, беговая дорожка спортдоставка, беговая дорожка стоит, беговая дорожка т, беговая дорожка фитнес, беговая дорожка фото, беговой дорожка, беговой тренажер, беговой тренажер для дома, беговы дорожки, беговые дорожки для дома минск, беговые дорожки беларусь, беговые дорожки интернет, беговые дорожки спорт тренажеры, беговые дорожки характеристики, взять в аренду беговую дорожку, взять в аренду беговую дорожку в минске, взять в прокат беговую дорожку, взять напрокат беговую дорожку, где беговая дорожка, домашний спортзал, домашняя беговая дорожка, интернет магазин беговых дорожек, какая беговая дорожка, какая беговая дорожка лучше, компактная беговая дорожка, купить беговой, купить тренажер, лучшие беговые дорожки, лучшие тренажеры беговая дорожка, мини спортзал, прокат беговой дорожки, прокат беговой дорожки в минске, прокат беговых дорожек в минске с доставкой, сделать спортзал, складная беговая дорожка, складные беговые дорожки, сколько стоит беговая дорожка, спорт беговые дорожки, спортзал дома, спортзал спортивный, спортивные беговые дорожки, спортивные тренажеры беговая дорожка, спортивный беговой тренажер, тренажер беговая дорожка, тренажер беговая дорожка для дома, тренажер беговой эллиптический, тренажер дорожка, тренировка на беговой дорожке, фитнес тренажер, хороший спортзал, электрическая беговая дорожка, электрическая беговая дорожка для дома, эллиптическая беговая дорожка, аренда велотренажера, аренда велотренажеров в минске, аренда горизонтальных велотренажеров минск бесплатная доставка, аренда прокат тренажеров, аренда спортивных тренажеров, аренда тренажера эллипс, аренда тренажеров, аренда тренажеров брест, аренда тренажеров минск, аренда тренажеров минск с доставкой, аренда эллипсоидного тренажера, беговая или велотренажер, велотренажер, велотренажер для дома, велотренажер для дома аренда, велотренажер для похудения, велотренажер или беговая дорожка, велотренажер с доставкой, велотренажер магнитный, велотренажер минск, велотренажер напрокат, велотренажер напрокат в минске, велотренажер напрокат в минске с доставкой, велотренажер напрокат в минске с доставкой цена, велотренажер прокат, велотренажер прокат минск, велотренажер спорт, велотренажер спорт доставка, велотренажеры интернет, велотренажеры минск, взять в аренду велотренажер, взять в аренду тренажер, взять в аренду тренажер в минске, взять в аренду тренажер эллипсоид, взять велотренажер напрокат минск, взять напрокат велотренажер, взять тренажер напрокат, дорожка напрокат, заказать тренажер эллипсоид аренда, лучшие велотренажеры, прокат велотренажеров, прокат эллипсоида, прокат эллипсоида минск, спорт эллипсоид, спортдоставка велотренажеры, тренажер аренда, тренажер велотренажер, тренажер дом, тренажер минск, тренажер напрокат, тренажер напрокат минск, тренажер прокат, тренажер прокат минск, тренажер эллипсоид в прокат, тренажер эллипсоид аренда, тренажер эллиптический аренда минск, эллипс тренажер, эллипсный тренажер +в аренду, эллипсоид, эллипсоид минск, эллипсоид напрокат, эллипсоид напрокат минск, эллипсоид тренажер, эллипсоид цена, эллипсоидный тренажер, эллиптический велотренажер, эллиптический тренажер, эллиптический тренажер в аренду, эллиптический тренажер для дома, эллиптический тренажер взять в аренду, эллиптический тренажер минск, эллиптический тренажер спорт, эллиптический тренажер спорт доставка">
+  <meta name="Keywords" content="аренда беговой дорожки, аренда беговой дорожки минск, бег на беговой дорожке, бега на беговой дорожке, бега дорожка, бегова дорожка, беговая дорожка, беговая дорожка в домашних условиях, беговая дорожка для дома, беговая дорожка для дома аренда, беговая дорожка для дома недорого, беговая дорожка для дома прокат, беговая дорожка для дома спортдоставка, беговая дорожка для квартиры, беговая дорожка или эллиптический тренажер, беговая дорожка с доставкой, беговая дорожка housefit, беговая дорожка nordictrack, беговая дорожка sport, беговая дорожка t, беговая дорожка бу, беговая дорожка домой, беговая дорожка минск, беговая дорожка минск цены, беговая дорожка мышцы, беговая дорожка напрокат, беговая дорожка напрокат в минске, беговая дорожка напрокат в минске с доставкой, беговая дорожка недорого, беговая дорожка похудей, беговая дорожка рб, беговая дорожка сайты, беговая дорожка сколько, беговая дорожка спортдоставка, беговая дорожка стоит, беговая дорожка т, беговая дорожка фитнес, беговая дорожка фото, беговой дорожка, беговой тренажер, беговой тренажер для дома, беговы дорожки, беговые дорожки для дома минск, беговые дорожки беларусь, беговые дорожки интернет, беговые дорожки спорт тренажеры, беговые дорожки характеристики, взять в аренду беговую дорожку, взять в аренду беговую дорожку в минске, взять в прокат беговую дорожку, взять напрокат беговую дорожку, где беговая дорожка, домашний спортзал, домашняя беговая дорожка, интернет магазин беговых дорожек, какая беговая дорожка, какая беговая дорожка лучше, компактная беговая дорожка, купить беговой, купить тренажер, лучшие беговые дорожки, лучшие тренажеры беговая дорожка, мини спортзал, прокат беговой дорожки, прокат беговой дорожки в минске, прокат беговых дорожек в минске с доставкой, сделать спортзал, складная беговая дорожка, складные беговые дорожки, сколько стоит беговая дорожка, спорт беговые дорожки, спортзал дома, спортзал спортивный, спортивные беговые дорожки, спортивные тренажеры беговая дорожка, спортивный беговой тренажер, тренажер беговая дорожка, тренажер беговая дорожка для дома, тренажер беговой эллиптический, тренажер дорожка, тренировка на беговой дорожке, фитнес тренажер, хороший спортзал, электрическая беговая дорожка, электрическая беговая дорожка для дома, эллиптическая беговая дорожка, аренда велотренажера, аренда велотренажеров в минске, аренда горизонтальных велотренажеров минск бесплатная доставка, аренда прокат тренажеров, аренда спортивных тренажеров, аренда тренажера эллипс, аренда тренажеров, аренда тренажеров брест, аренда тренажеров минск, аренда тренажеров минск с доставкой, аренда эллипсоидного тренажера, беговая или велотренажер, велотренажер, велотренажер для дома, велотренажер для дома аренда, велотренажер для похудения, велотренажер или беговая дорожка, велотренажер с доставкой, велотренажер магнитный, велотренажер минск, велотренажер напрокат, велотренажер напрокат в минске, велотренажер напрокат в минске с доставкой, велотренажер напрокат в минске с доставкой цена, велотренажер прокат, велотренажер прокат минск, велотренажер спорт, велотренажер спорт доставка, велотренажеры интернет, велотренажеры минск, взять в аренду велотренажер, взять в аренду тренажер, взять в аренду тренажер в минске, взять в аренду тренажер эллипсоид, взять велотренажер напрокат минск, взять напрокат велотренажер, взять тренажер напрокат, дорожка напрокат, заказать тренажер эллипсоид аренда, лучшие велотренажеры, прокат велотренажеров, прокат эллипсоида, прокат эллипсоида минск, спорт эллипсоид, спортдоставка велотренажеры, тренажер аренда, тренажер велотренажер, тренажер дом, тренажер минск, тренажер напрокат, тренажер напрокат минск, тренажер прокат, тренажер прокат минск, тренажер эллипсоид в прокат, тренажер эллипсоид аренда, тренажер эллиптический аренда минск, эллипс тренажер, эллипсный тренажер в аренду, эллипсоид, эллипсоид минск, эллипсоид напрокат, эллипсоид напрокат минск, эллипсоид тренажер, эллипсоид цена, эллипсоидный тренажер, эллиптический велотренажер, эллиптический тренажер, эллиптический тренажер в аренду, эллиптический тренажер для дома, эллиптический тренажер взять в аренду, эллиптический тренажер минск, эллиптический тренажер спорт, эллиптический тренажер спорт доставка">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -41,71 +42,29 @@
       "@type" : "DayOfWeek",
       "name" : "пн-пт"
     },
-    "opens" : "09:00",
-    "closes" : "17:00"
+    "opens" : "00:00",
+    "closes" : "23:59"
   },
   "url" : "http://sportzaldoma.by/"
 }
 </script>
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(61894266, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/61894266" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
-<div>
-<div class="header" >
-<a href ="index.html"><img id="LOGO" alt="Логотип sportzaldoma.by" src="images/logo11.png" title="Главная страница"></a>
-<p><a style=" color: white; padding-right: 10px"href="tel:+375291959090">+375 (29) 195-90-90</a>   &#160;  &#160;  &#160;  &#160;
-      <a style=" color: white;"href="tel:+375297800990">+375 (29) 780-09-90</a> &#160;  &#160;</p>
-      <div id="GreyLine"></div>
-			<div class="header_menu" >	
-		   		 <section> 
-		   		<a href="index.html">Главная</a>
-		   		<a href="About.html">О компании</a>
-          <a href="Products.html"><u>Каталог</u></a>
-				<a href="Contacts.html">Контакты</a> 
-     <!--  <a href="Price.html"><u>Прайс</u></a>-->
-				</section>
 
-    			<aside> 
-					<span id="sale"><h1>ПРОКАТ СПОРТИВНЫХ ТРЕНАЖЕРОВ В МИНСКЕ</h1></span>
-   				 </aside>
-		   		<input  type="checkbox" name="menu" id="btn-menu" />
-   				 <label  for="btn-menu">Меню</label> 
-   				 <div id="menu">
-				<div class="header_menu"><a href="index.html">Главная</a></div>
-				<div class="header_menu"><a href="About.html">О компании</a></div>
-        <div class="header_menu"><a href="Products.html"><u>Каталог</u></a></div>
-        <div class="header_menu"><a href="Contacts.html">Контакты</a></div>
-       <!-- <div class="header_menu"><a href="Price.html"><u>Прайс</u></a></div>-->
-			</div>
-			</div>
-
-			
-</div>
+<!-- Шапка -->
+ <script src="header.js"></script>
 
 <!-- Блок 1 -->
 <div class="Line"> <h2>Прокат спортивных тренажеров в Минске</h2> </div>
 <div class="content">
 <img style="border-radius: 13px;" id="pic1" src="images/run1.png">
-<p id="ContentText1" style=" text-align: left; float: right;  "><u>Кому нужна аренда спортивных тренажеров</u>:<br>
- - Людям которые не уверены в покупке<br>&#160;&#160;&#160;тренажера, но хотят попробовать;<br> 
-- Людям которые не хотят тратить<br>&#160;&#160;&#160;много времени на спортзал;<br>
-- Людям которые не хотят покупать<br>&#160;&#160;&#160;дорогие абонименты в спортзал;<br>
-- Людям которые живут на съемной квартире<br>&#160;&#160;&#160;и не хотят покупать спортивный тренажер;
+<p id="ContentText3" style=" text-align: left; float: right;  "><u>Кому нужна аренда спортивных тренажеров</u>:<br>
+ - Людям которые не уверены в покупке тренажера, но хотят попробовать;<br> 
+- Людям которые не хотят тратить много времени на спортзал;<br>
+- Людям которые не хотят покупать дорогие абонименты в спортзал;<br>
+- Людям которые живут на съемной квартире и не хотят покупать спортивный тренажер;
  </p>
 </div>
 
@@ -116,7 +75,7 @@
 &#160;&#160;&#160;В нашем прокате вы можете взять в аренду <u>беговую дорожку</u>, <u>эллиптический тренажер</u> (эллипсоид),
 <u>велотренажер</u> и другой спортивный инвентарь для занятия спортом дома.<br><br>
 
-&#160;&#160;&#160;Все тренажеры <u>новые</u> и <u>хорошо обслуженны</u>, <u>модели свежих годов</u>, с новыми технологиями для удобства занятия спортом.
+&#160;&#160;&#160;Все тренажеры <u>новые</u> и <u>хорошо обслужены</u>, <u>модели свежих годов</u>, с новыми технологиями для удобства занятия спортом.
  </p>
 </div>
 
@@ -174,7 +133,7 @@
 </div>
 
 <!-- Блок 3 -->
-<div class="Line"> <h2>Информация о аренде</h2> </div>
+<div class="Line"> <h2>Информация об аренде</h2> </div>
 <div class="content">
 <p id="ContentText3" style="text-align: center; float: left; padding-right: 2%; ">
 Перед тем как брать в аренду тренажер ознакомьтесь со следующими страницами:<br>
@@ -190,27 +149,13 @@
 <div class="Line"> <h2>Преимущества проката</h2> </div>
 <div class="content">
 <p id="ContentText2" style="text-align: center; float: left; padding-right: 2%; ">&#160;&#160;&#160;&#160;&#160;<u>Нет времени на посещение спортзала?</u></p>
-<p id="ContentText3" style="text-align: center; float: left; padding-right: 2%; ">С этой проблемой вам поможет справиться наш прокат спортивных тренажеров! В нашем магазине мы можете взять в аренду беговую дорожку, велотренажер, эллипсоид домой и заниматься дома, не тратя дополнительное время на поездку.
+<p id="ContentText3" style="text-align: center; float: left; padding-right: 2%; ">С этой проблемой вам поможет справиться наш прокат спортивных тренажеров! В нашем магазине вы можете взять в аренду беговую дорожку, велотренажер, эллипсоид домой и заниматься дома, не тратя дополнительное время на поездку.
  </p>
 <img style="border-radius: 13px;" id="pic1" src="images/run.png">
 </div>
 
-
-
-<!-- Подвал -->
-<div class="footer">	
-<div style="float: left; margin-left: 5%;">
-			
-				<a href="mailto:info@sportzaldoma.by">info@sportzaldoma.by</a>
-				<br>
-				<a href="tel:+375291959090">тел +375 (29) 195-90-90</a>  <a href="tel:+375297800990">тел +375 (29) 780-09-90</a> 
-</div>				
-<div id="footerP">
-				<p >г. Минск, пр-т Независимости д. 177, пом. 3, комната 22<br>
-				 Время работы пн-пт: с 9-00 до 17-00 <br>
-				 выходной: суббота, воскресенье.</p> 
-</div>			
-</div>
+  <!-- Подвал -->
+  <script src="footer.js"></script>
 </body>
 </html>
 
