--- a/WorkingHours.html
+++ b/WorkingHours.html
@@ -28,9 +28,9 @@
 
 <div class="content">
 
-<p style="text-align: center;">пн-пт: с 9-00 до 17-00 <br> 
-выходной: суббота, воскресенье <br><br> 
-Телефоны (с 9-00 до 17-00 пн-пт):<br>
+<p style="text-align: center;">Работаем круглосуточно<br> 
+Без выходных<br><br> 
+Телефоны:<br>
 <a style="color: black;" href="tel:+375291959090">A1 +375 (29) 195-90-90</a> <br>  <a style="color: black;"  href="tel:+375297800990">МТС +375 (29) 780-09-90</a> 
 </p>
 
