--- a/begovie_dorojki/DFCFocusT-4607.html
+++ b/begovie_dorojki/DFCFocusT-4607.html
@@ -133,7 +133,7 @@
 </div>
     
   <!-- Подвал -->
-  <script src="footer.js"></script>
+  <script src="../footer.js"></script>
 </body>
 </html>
 
