--- a/begovie_dorojki/NORDICTRACKT7.0.html
+++ b/begovie_dorojki/NORDICTRACKT7.0.html
@@ -150,7 +150,7 @@ Cистема амортизации FlexSelect™ увеличивают ком
 </div>
     
   <!-- Подвал -->
-  <script src="footer.js"></script>
+  <script src="../footer.js"></script>
 </body>
 </html>
 
