--- a/elipsoidi/KonlegaK8731.html
+++ b/elipsoidi/KonlegaK8731.html
@@ -134,7 +134,7 @@
 </div>
     
   <!-- Подвал -->
-  <script src="footer.js"></script>
+  <script src="../footer.js"></script>
 </body>
 </html>
 
