--- a/velotrenajeri/KonlegaK8601.html
+++ b/velotrenajeri/KonlegaK8601.html
@@ -138,7 +138,7 @@
 </div>
     
   <!-- Подвал -->
-  <script src="footer.js"></script>
+  <script src="../footer.js"></script>
 </body>
 </html>
 
