--- a/begovie_dorojki/American-Fitness-SPR-NOG9206.html
+++ b/begovie_dorojki/American-Fitness-SPR-NOG9206.html
@@ -137,7 +137,7 @@
 </div>
     
   <!-- Подвал -->
-  <script src="footer.js"></script>
+  <script src="../footer.js"></script>
 </body>
 </html>
 
