--- a/begovie_dorojki/AtlasSport680STFT.html
+++ b/begovie_dorojki/AtlasSport680STFT.html
@@ -132,7 +132,7 @@
 </div>
     
   <!-- Подвал -->
-  <script src="footer.js"></script>
+  <script src="../footer.js"></script>
 </body>
 </html>
 
