--- a/elipsoidi/KonlegaK8709.html
+++ b/elipsoidi/KonlegaK8709.html
@@ -133,7 +133,7 @@
 </div>
     
   <!-- Подвал -->
-  <script src="footer.js"></script>
+  <script src="../footer.js"></script>
 </body>
 </html>
 
