--- a/velotrenajeri/KonlegaK8738.html
+++ b/velotrenajeri/KonlegaK8738.html
@@ -137,7 +137,7 @@
 </div>
     
   <!-- Подвал -->
-  <script src="footer.js"></script>
+  <script src="../footer.js"></script>
 </body>
 </html>
 
