--- a/About.html
+++ b/About.html
@@ -46,7 +46,7 @@
 <p style="text-align: center;">Компания SportzalDoma занимается прокатом спортивных тренажеров и инвентаря для занятий спортом дома. У нас вы можете взять в аренду такие тренажеры, как беговая дорожка, эллиптический тренажер (эллипсоид), велотренажер и прочий спортивный инвентарь.<br>Все тренажеры хорошо обслужены, модели свежих годов, с новыми технологиями для удобства занятия спортом.<br><br> Самостоятельно забрать тренажер вы можете в Уручье (Бизнес-центр Порт),<br>г. Минск пр-т Независимости 177.</p> 
 
 <div style="width: 60vw; margin: auto;  ">
-	<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7737027dbb95ef363ae4a5b0e64346abb673f518cb20ed5444bea060fb6f7725&amp;width=1147&amp;height=579&amp;lang=ru_RU&amp;scroll=true"></script>
+	<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7737027dbb95ef363ae4a5b0e64346abb673f518cb20ed5444bea060fb6f7725&amp;width=60vw&amp;height=30vw&amp;lang=ru_RU&amp;scroll=true"></script>
 </div>
 <p style="text-align: center;">Также наша компания осуществляет доставку.</p>
 
@@ -56,7 +56,7 @@
 <a href="delivery.html"><p style="text-align: center;">&#149;<u>Доставка</u></p></a>
 <a href="AboutCompany.html"><p style="text-align: center;">&#149;<u>О компании</u></p></a>
 <a href="WorkingHours.html"><p style="text-align: center;">&#149;<u>Время работы</u></p></a>
-<a href="MakeAPurchase.html"><p style="text-align: center;">&#149;<u>Совершить покупку</u></p></a>
+<a href="MakeAPurchase.html"><p style="text-align: center;">&#149;<u>Взять в аренду</u></p></a>
 <a href="PaymentMethods.html"><p style="text-align: center;">&#149;<u>Способы оплаты</u></p></a>
 <a href="Requisites.html"><p style="text-align: center;">&#149;<u>Реквизиты</u></p></a>
 
