--- a/begovie_dorojki.html
+++ b/begovie_dorojki.html
@@ -41,7 +41,7 @@
 
 <div class="Line"> <h1>Беговые дорожки</h1> </div>
 <div class="content">
-<h2><a href="Products.html" id="Back">🠔Каталог</a></h2>
+<h2><a href="Products.html" id="Back">⬅Каталог</a></h2>
 <div class="block">
 <a href="begovie_dorojki/American-Fitness-SPR-NOG9206.html">
   <img id="pictureInBlock" alt="Беговая дорожка American Fitness NOG9206" src="images/products/American-Fitness-SPR-NOG9206-1.jpeg">
