--- a/begovie_dorojki/American-Fitness-SPR-NOG9206.html
+++ b/begovie_dorojki/American-Fitness-SPR-NOG9206.html
@@ -47,7 +47,7 @@
 <div class="Line"> <h1>Беговая дорожка American Fitness NOG9206</h1> </div>
 <div class="content">
 
-<h2><a href="../begovie_dorojki.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../begovie_dorojki.html" id="Back">⬅Назад</a></h2>
 
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Беговая дорожка American Fitness NOG9206" src="../images/products/American-Fitness-SPR-NOG9206-1.jpeg">
 
