--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -41,7 +41,7 @@
 
 <div class="Line"> <h1>Эллиптические тренажеры (элипсоиды)</h1> </div>
 <div class="content">
-<h2><a href="Products.html" id="Back">🠔Каталог</a></h2>
+<h2><a href="Products.html" id="Back">⬅Каталог</a></h2>
 <div class="block">
 <a href="elipsoidi/KonlegaK8709.html">
   <img id="pictureInBlock" alt="Элиптический тренажер Konlega K8709" src="images/products/KonlegaK8709.jpg">
