--- a/elipsoidi/ProForm225.html
+++ b/elipsoidi/ProForm225.html
@@ -47,7 +47,7 @@
 <div class="Line"> <h1>Элиптический тренажер ProForm 225</h1> </div>
 <div class="content">
 
-<h2><a href="../elipsoidi.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
 
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Элиптический тренажер ProForm 225" src="../images/products/ProForm225.jpg">
 
