--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 <div class="content">
 <img style="border-radius: 13px;" id="pic1" src="images/run1.png">
 <p id="ContentText3" style=" text-align: left; float: right;  "><u>Кому нужна аренда спортивных тренажеров</u>:<br>
- - Людям которые не уверены в покупке тренажера, но хотят попробовать;<br> 
-- Людям которые не хотят тратить много времени на спортзал;<br>
-- Людям которые не хотят покупать дорогие абонименты в спортзал;<br>
-- Людям которые живут на съемной квартире и не хотят покупать спортивный тренажер;
+ - Людям, которые не уверены в покупке тренажера, но хотят попробовать;<br> 
+- Людям, которые не хотят тратить много времени на спортзал;<br>
+- Людям, которые не хотят покупать дорогие абонименты в спортзал;<br>
+- Людям, которые живут на съемной квартире и не хотят покупать спортивный тренажер;
  </p>
 </div>
 
@@ -101,16 +101,16 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Беговая дорожка ProForm Performance 600i" src="images/products/ProFormPerformance.jpg" tabindex="0"><p>ProForm Performance 600i</p></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Беговая дорожка American Fitness NOG9206" src="images/products/American-Fitness-SPR-NOG9206-1.jpeg" tabindex="0"><p>American Fitness NOG9206</p></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Велотренажер Konlega K8601" src="images/products/KonlegaK8601.jpg" tabindex="0"><p>Велотренажер Konlega K8601</p></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Велотренажер Konlega K8516" src="images/products/KonlegaK8516.jpg" tabindex="0"><p>Велотренажер Konlega K8516</p></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Велотренажер Konlega K8738" src="images/products/KonlegaK8738.jpg" tabindex="0"><p>Велотренажер Konlega K8738</p></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллипсоид ProForm 225" src="images/products/ProForm225.jpg" tabindex="0"><p>Эллипсоид ProForm 225</p></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллипсоид Konlega K8709" src="images/products/KonlegaK8709.jpg" tabindex="0"><p>Эллипсоид Konlega K8709</p></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллипсоид Konlega K8731" src="images/products/KonlegaK8731.jpg" tabindex="0"><p>Эллипсоид Konlega K8731</p></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Гипперэкстензия DFC SJ1005" src="images/products/DFC-SJ1005.jpg" tabindex="0"><p>Гипперэкстензия DFC SJ1005
-</p></li>
+    <li class="ant-carousel-element"><a href="begovie_dorojki/ProFormPerformance600i.html"><img id="picture" alt="Беговая дорожка ProForm Performance 600i" src="images/products/ProFormPerformance.jpg" ><p style="color: black;">ProForm Performance 600i</p></a></li>
+    <li class="ant-carousel-element"><a href="begovie_dorojki/American-Fitness-SPR-NOG9206.html"><img id="picture" alt="Беговая дорожка American Fitness NOG9206" src="images/products/American-Fitness-SPR-NOG9206-1.jpeg"><p style="color: black;">American Fitness NOG9206</p></a></li>
+    <li class="ant-carousel-element"><a href="velotrenajeri/KonlegaK8601.html"><img id="picture" alt="Велотренажер Konlega K8601" src="images/products/KonlegaK8601.jpg"><p style="color: black;">Велотренажер Konlega K8601</p></a></li>
+    <li class="ant-carousel-element"><a href="velotrenajeri/KonlegaK8516.html"><img id="picture" alt="Велотренажер Konlega K8516" src="images/products/KonlegaK8516.jpg"><p style="color: black;">Велотренажер Konlega K8516</p></a></li>
+    <li class="ant-carousel-element"><a href="velotrenajeri/KonlegaK8738.html"><img id="picture" alt="Велотренажер Konlega K8738" src="images/products/KonlegaK8738.jpg"><p style="color: black;">Велотренажер Konlega K8738</p></a></li>
+    <li class="ant-carousel-element"><a href="elipsoidi/ProForm225.html"><img id="picture" alt="Эллипсоид ProForm 225" src="images/products/ProForm225.jpg"><p style="color: black;">Эллипсоид ProForm 225</p></a></li>
+    <li class="ant-carousel-element"><a href="elipsoidi/KonlegaK8709.html"><img id="picture" alt="Эллипсоид Konlega K8709" src="images/products/KonlegaK8709.jpg"><p style="color: black;">Эллипсоид Konlega K8709</p></a></li>
+    <li class="ant-carousel-element"><a href="elipsoidi/KonlegaK8731.html"><img id="picture" alt="Эллипсоид Konlega K8731" src="images/products/KonlegaK8731.jpg"><p style="color: black;">Эллипсоид Konlega K8731</p></a></li>
+    <li class="ant-carousel-element"><a href="skamyi/DFC-SJ1005.html"><img id="picture" alt="Гипперэкстензия DFC SJ1005" src="images/products/DFC-SJ1005.jpg"><p style="color: black;">Гипперэкстензия DFC SJ1005
+</p></a></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
@@ -165,7 +165,7 @@
 <div class="Line"> <h2>Преимущества проката</h2> </div>
 <div class="content">
 <p id="ContentText2" style="text-align: center; float: left; padding-right: 2%; ">&#160;&#160;&#160;&#160;&#160;<u>Нет времени на посещение спортзала?</u></p>
-<p id="ContentText3" style="text-align: center; float: left; padding-right: 2%; ">С этой проблемой вам поможет справиться наш прокат спортивных тренажеров! В нашем магазине вы можете взять в аренду беговую дорожку, велотренажер, эллипсоид домой и заниматься дома, не тратя дополнительное время на поездку.
+<p id="ContentText3" style="text-align: center; float: left; padding-right: 2%; ">С этой проблемой вам поможет справиться наш прокат спортивных тренажеров! В нашем прокате вы можете взять в аренду беговую дорожку, велотренажер, эллипсоид домой и заниматься дома, не тратя дополнительное время на поездку.
  </p>
 <img style="border-radius: 13px;" id="pic1" src="images/run.png">
 </div>
