--- a/rent_rules.html
+++ b/rent_rules.html
@@ -54,7 +54,7 @@
 
 <h2>3. ОФОРМЛЕНИЕ ДОГОВОРНЫХ ОТНОШЕНИЙ</h2>
 <p id="MiniP">
-При получении товара в прокат с клиентом заключается договор проката, который подписывается менеджером проката с одной стороны, и Клиентом, с другой стороны. При получении предмета проката в обоих экземплярах договора проката заполняется Акт приема/возврата. После возврата предмета проката в обоих экземплярах договора заполняется Акт возврата. Сохраняйте все документы по договору проката до завершения договора и проведения окончательных взаиморасчетов с нашим прокатом.
+При получении товара в прокат с клиентом заключается договор проката, который подписывается менеджером проката с одной стороны и Клиентом с другой стороны. При получении предмета проката в обоих экземплярах договора проката заполняется Акт приема/возврата. После возврата предмета проката в обоих экземплярах договора заполняется Акт возврата. Сохраняйте все документы по договору проката до завершения договора и проведения окончательных взаиморасчетов с нашим прокатом.
 </p> 
 
 <h2>4. ПОЛУЧЕНИЕ ТОВАРА</h2>
