--- a/skamyi/DFC-SJ1005.html
+++ b/skamyi/DFC-SJ1005.html
@@ -46,7 +46,7 @@
   
 <div class="Line"> <h1>Гипперэкстензия DFC SJ1005</h1> </div>
 <div class="content">
-<h2><a href="../skamyi.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../skamyi.html" id="Back">⬅Назад</a></h2>
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Гипперэкстензия DFC SJ1005" src="../images/products/DFC-SJ1005.jpg">
 
 <!-- Карусель -->
