--- a/velotrenajeri.html
+++ b/velotrenajeri.html
@@ -40,7 +40,7 @@
 
 <div class="Line"> <h1>Велотренажеры</h1> </div>
 <div class="content">
-<h2><a href="Products.html" id="Back">🠔Каталог</a></h2>
+<h2><a href="Products.html" id="Back">⬅Каталог</a></h2>
 <div class="block">
 <a href="velotrenajeri/KonlegaK8516.html">
   <img id="pictureInBlock" alt="Велотренажер Konlega K8516" src="images/products/KonlegaK8516.jpg">
