--- a/velotrenajeri/KonlegaK8516.html
+++ b/velotrenajeri/KonlegaK8516.html
@@ -47,7 +47,7 @@
 <div class="Line"> <h1>Велотренажер Konlega K8516</h1> </div>
 <div class="content">
 
-<h2><a href="../velotrenajeri.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../velotrenajeri.html" id="Back">⬅Назад</a></h2>
 
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Велотренажер Konlega K8516" src="../images/products/KonlegaK8516.jpg">
 
