--- a/MakeAPurchase.html
+++ b/MakeAPurchase.html
@@ -39,7 +39,7 @@
 <!-- Шапка -->
  <script src="header.js"></script>
 
-<div class="Line"> <h2>Совершить покупку</h2> </div>
+<div class="Line"> <h2>Взять в аренду</h2> </div>
 
 <div class="content">
 
@@ -48,7 +48,7 @@
 Уважаемые клиенты!<br>
 <br>
 &nbsp;&nbsp;&nbsp;Мы надеемся, что среди широкого ассортимента наших товаров вы найдете именно тот, который
-искали, и воспользуетесь нашими услугами, чтобы его приобрести. Для этого достаточно 
+искали, и воспользуетесь нашими услугами, чтобы взять его в аренду. Для этого достаточно 
 совершить несколько простых действий:<br>
 <br>
 
@@ -83,7 +83,7 @@
 покупки в интернет-магазине sportzaldoma.by<br>
 <br>
 7. Копия платежного документа (чек).<br>
-<img style="border-radius: 13px;" alt="чек магазина"  src="images/check.png">
+<img id="pic1" style="border-radius: 13px;"  alt="чек магазина"  src="images/check.png">
 </p> 
 </div>
 
