--- a/begovie_dorojki/AtlasSport680STFT.html
+++ b/begovie_dorojki/AtlasSport680STFT.html
@@ -46,7 +46,7 @@
   
 <div class="Line"> <h1>Беговая дорожка Atlas Sport 680STFT</h1> </div>
 <div class="content">
-<h2><a href="../begovie_dorojki.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../begovie_dorojki.html" id="Back">⬅Назад</a></h2>
 
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Беговая дорожка Atlas Sport 680STFT" src="../images/products/AtlasSport680STFT.jpeg">
 
