--- a/begovie_dorojki/NORDICTRACKT7.0.html
+++ b/begovie_dorojki/NORDICTRACKT7.0.html
@@ -47,7 +47,7 @@
 <div class="Line"> <h1>Беговая дорожка NORDICTRACK T 7.0</h1> </div>
 <div class="content">
 
-<h2><a href="../begovie_dorojki.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../begovie_dorojki.html" id="Back">⬅Назад</a></h2>
 
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Беговая дорожка NORDICTRACK T 7.0" src="../images/products/NORDICTRACKT7.0_1.jpg">
 
