--- a/begovie_dorojki/ProFormPerformance600i.html
+++ b/begovie_dorojki/ProFormPerformance600i.html
@@ -47,7 +47,7 @@
 <div class="Line"> <h1>ProForm Performance 600i</h1> </div>
 <div class="content">
 
-<h2><a href="../begovie_dorojki.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../begovie_dorojki.html" id="Back">⬅Назад</a></h2>
 
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="ProForm Performance 600i" src="../images/products/ProFormPerformance.jpg">
 
