--- a/elipsoidi/KonlegaK8731.html
+++ b/elipsoidi/KonlegaK8731.html
@@ -47,7 +47,7 @@
 <div class="Line"> <h1>Элиптический тренажер Konlega K8731</h1> </div>
 <div class="content">
 
-<h2><a href="../elipsoidi.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
 
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Элиптический тренажер Konlega K8731" src="../images/products/KonlegaK8731.jpg">
 
