--- a/skamyi.html
+++ b/skamyi.html
@@ -40,7 +40,7 @@
 
 <div class="Line"> <h1>Скамьи для жима, пресса и спины</h1> </div>
 <div class="content">
-<h2><a href="Products.html" id="Back">🠔Каталог</a></h2>
+<h2><a href="Products.html" id="Back">⬅Каталог</a></h2>
 <div class="block">
 <a href="skamyi/DFC-SJ1005.html">
   <img id="pictureInBlock" alt="Гипперэкстензия DFC SJ1005" src="images/products/DFC-SJ1005.jpg">
