--- a/skamyi/TUNTURI-CT80.html
+++ b/skamyi/TUNTURI-CT80.html
@@ -45,7 +45,7 @@
   
 <div class="Line"> <h1>Скамья регулируемая TUNTURI CT80</h1> </div>
 <div class="content">
-<h2><a href="../skamyi.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../skamyi.html" id="Back">⬅Назад</a></h2>
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Скамья регулируемая TUNTURI CT80" src="../images/products/TUNTURI-CT80-1.jpg">
 
 <!-- Карусель -->
