--- a/skamyi/TUNTURI-FB80.html
+++ b/skamyi/TUNTURI-FB80.html
@@ -46,7 +46,7 @@
   
 <div class="Line"> <h1>Скамья горизонтальная TUNTURI FB80</h1> </div>
 <div class="content">
-<h2><a href="../skamyi.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../skamyi.html" id="Back">⬅Назад</a></h2>
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Скамья горизонтальная TUNTURI FB80" src="../images/products/TUNTURI-FB80-1.jpg">
 
 <!-- Карусель -->
