--- a/skamyi/TUNTURI-UB60.html
+++ b/skamyi/TUNTURI-UB60.html
@@ -46,7 +46,7 @@
   
 <div class="Line"> <h1>Скамья регулируемая TUNTURI UB60</h1> </div>
 <div class="content">
-<h2><a href="../skamyi.html" id="Back">🠔Назад</a></h2>
+<h2><a href="../skamyi.html" id="Back">⬅Назад</a></h2>
 <img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Скамья регулируемая TUNTURI UB60" src="../images/products/TUNTURI-UB60-1.jpg">
 
 <!-- Карусель -->
