--- a/Contacts.html
+++ b/Contacts.html
@@ -43,16 +43,32 @@
 <div class="Line"> <h2>КОНТАКТЫ</h2> </div>
 
 <div class="content">
-
-<p>Юридический адрес:<br>
+<center>
+<p style="width: 42vw;"><u>Юридический адрес:</u><br>
 220125, Республика Беларусь, г. Минск, пр-т Независимости, д.177, пом. 3, комната 22<br>
-Телефоны:<br>
+</p> 
+<p style="text-align: center;"><u>Телефоны:</u><br>
 МТС <u><a style="color: black;" href="tel:+375291959090" >+375 (29) 195-90-90</a></u> <br>
 &#160;A1&#160;&#160; <u><a style="color: black;" href="tel:+375297800990">+375 (29) 780-09-90</a></u> <br>
 e-mail: <u><a style="color: black;" href="mailto:info@sportzaldoma.by">info@sportzaldoma.by</a></u><br></p> 
+<p style="text-align: center;">Соцальные сети:</u></p> 
+<div class="socialnetwork">
+<a href="https://www.facebook.com/sportzaldomaby/" >
+<img  src="images/facebook.png">
+<p style="text-align: center;"><u>Facebook</u></p> 
+</a>
+<a href="https://www.instagram.com/sportzaldoma.by/" >
+<img  src="images/instagram.png">
+<p style="text-align: center;"><u>Instagram</u></p> 
+</a>
+<a href="https://vk.com/sportzaldomaby" >
+<img src="images/vk.png" >
+<p style="text-align: center;"><u>Вконтакте</u></p> 
+</a>
+</div></center>
 <p style="text-align: center;">КАРТА ПРОЕЗДА:</p> 
 <div style="width: 60vw; margin: auto;  ">
- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7737027dbb95ef363ae4a5b0e64346abb673f518cb20ed5444bea060fb6f7725&amp;width=1147&amp;height=579&amp;lang=ru_RU&amp;scroll=true"></script>
+  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7737027dbb95ef363ae4a5b0e64346abb673f518cb20ed5444bea060fb6f7725&amp;width=60vw&amp;height=30vw&amp;lang=ru_RU&amp;scroll=true"></script>
 </div>
 </div>
 
