--- a/index.html
+++ b/index.html
@@ -170,6 +170,27 @@
 <img style="border-radius: 13px;" id="pic1" src="images/run.png">
 </div>
 
+<!-- Блок 5 -->
+<div class="Line"> <h2>Социальные сети</h2> </div>
+<div class="content">
+<center>
+  <div class="socialnetwork">
+<a href="https://www.facebook.com/sportzaldomaby/" >
+<img  src="images/facebook.png">
+<p style="text-align: center;"><u>Facebook</u></p> 
+</a>
+<a href="https://www.instagram.com/sportzaldoma.by/" >
+<img  src="images/instagram.png">
+<p style="text-align: center;"><u>Instagram</u></p> 
+</a>
+<a href="https://vk.com/sportzaldomaby" >
+<img src="images/vk.png" >
+<p style="text-align: center;"><u>Вконтакте</u></p> 
+</a>
+</div>
+</center>
+</div>
+
   <!-- Подвал -->
   <script src="footer.js"></script>
 </body>
