--- a/Contacts.html
+++ b/Contacts.html
@@ -53,15 +53,15 @@
 e-mail: <u><a style="color: black;" href="mailto:info@sportzaldoma.by">info@sportzaldoma.by</a></u><br></p> 
 <p style="text-align: center;">Соцальные сети:</u></p> 
 <div class="socialnetwork">
-<a href="https://www.facebook.com/sportzaldomaby/" >
+<a alt="Аренда спортивных тренажеров в facebook" href="https://www.facebook.com/sportzaldomaby/" >
 <img  src="images/facebook.png">
 <p style="text-align: center;"><u>Facebook</u></p> 
 </a>
-<a href="https://www.instagram.com/sportzaldoma.by/" >
+<a alt="Аренда спортивных тренажеров в instagram" href="https://www.instagram.com/sportzaldoma.by/" >
 <img  src="images/instagram.png">
 <p style="text-align: center;"><u>Instagram</u></p> 
 </a>
-<a href="https://vk.com/sportzaldomaby" >
+<a alt="Аренда спортивных тренажеров в вконтакте"  href="https://vk.com/sportzaldomaby" >
 <img src="images/vk.png" >
 <p style="text-align: center;"><u>Вконтакте</u></p> 
 </a>
