--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <!-- Блок 1 -->
 <div class="Line"> <h2>Прокат спортивных тренажеров в Минске</h2> </div>
 <div class="content">
-<img style="border-radius: 13px;" id="pic1" src="images/run1.png">
+<img style="border-radius: 13px;" id="pic1" src="images/run1.png" alt="Аренда беговой дорожки">
 <p id="ContentText3" style=" text-align: left; float: right;  "><u>Кому нужна аренда спортивных тренажеров</u>:<br>
  - Людям, которые не уверены в покупке тренажера, но хотят попробовать;<br> 
 - Людям, которые не хотят тратить много времени на спортзал;<br>
@@ -101,15 +101,15 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><a href="begovie_dorojki/ProFormPerformance600i.html"><img id="picture" alt="Беговая дорожка ProForm Performance 600i" src="images/products/ProFormPerformance.jpg" ><p style="color: black;">ProForm Performance 600i</p></a></li>
-    <li class="ant-carousel-element"><a href="begovie_dorojki/American-Fitness-SPR-NOG9206.html"><img id="picture" alt="Беговая дорожка American Fitness NOG9206" src="images/products/American-Fitness-SPR-NOG9206-1.jpeg"><p style="color: black;">American Fitness NOG9206</p></a></li>
-    <li class="ant-carousel-element"><a href="velotrenajeri/KonlegaK8601.html"><img id="picture" alt="Велотренажер Konlega K8601" src="images/products/KonlegaK8601.jpg"><p style="color: black;">Велотренажер Konlega K8601</p></a></li>
-    <li class="ant-carousel-element"><a href="velotrenajeri/KonlegaK8516.html"><img id="picture" alt="Велотренажер Konlega K8516" src="images/products/KonlegaK8516.jpg"><p style="color: black;">Велотренажер Konlega K8516</p></a></li>
-    <li class="ant-carousel-element"><a href="velotrenajeri/KonlegaK8738.html"><img id="picture" alt="Велотренажер Konlega K8738" src="images/products/KonlegaK8738.jpg"><p style="color: black;">Велотренажер Konlega K8738</p></a></li>
-    <li class="ant-carousel-element"><a href="elipsoidi/ProForm225.html"><img id="picture" alt="Эллипсоид ProForm 225" src="images/products/ProForm225.jpg"><p style="color: black;">Эллипсоид ProForm 225</p></a></li>
-    <li class="ant-carousel-element"><a href="elipsoidi/KonlegaK8709.html"><img id="picture" alt="Эллипсоид Konlega K8709" src="images/products/KonlegaK8709.jpg"><p style="color: black;">Эллипсоид Konlega K8709</p></a></li>
-    <li class="ant-carousel-element"><a href="elipsoidi/KonlegaK8731.html"><img id="picture" alt="Эллипсоид Konlega K8731" src="images/products/KonlegaK8731.jpg"><p style="color: black;">Эллипсоид Konlega K8731</p></a></li>
-    <li class="ant-carousel-element"><a href="skamyi/DFC-SJ1005.html"><img id="picture" alt="Гипперэкстензия DFC SJ1005" src="images/products/DFC-SJ1005.jpg"><p style="color: black;">Гипперэкстензия DFC SJ1005
+    <li class="ant-carousel-element"><a href="begovie_dorojki/ProFormPerformance600i.html"><img id="picture" alt="Аренда беговой дорожки ProForm Performance 600i" src="images/products/ProFormPerformance.jpg" ><p style="color: black;">ProForm Performance 600i</p></a></li>
+    <li class="ant-carousel-element"><a href="begovie_dorojki/American-Fitness-SPR-NOG9206.html"><img id="picture" alt="Аренда беговой дорожки American Fitness NOG9206" src="images/products/American-Fitness-SPR-NOG9206-1.jpeg"><p style="color: black;">American Fitness NOG9206</p></a></li>
+    <li class="ant-carousel-element"><a href="velotrenajeri/KonlegaK8601.html"><img id="picture" alt="Аренда велотренажера Konlega K8601" src="images/products/KonlegaK8601.jpg"><p style="color: black;">Велотренажер Konlega K8601</p></a></li>
+    <li class="ant-carousel-element"><a href="velotrenajeri/KonlegaK8516.html"><img id="picture" alt="Аренда велотренажера Konlega K8516" src="images/products/KonlegaK8516.jpg"><p style="color: black;">Велотренажер Konlega K8516</p></a></li>
+    <li class="ant-carousel-element"><a href="velotrenajeri/KonlegaK8738.html"><img id="picture" alt="Аренда велотренажера Konlega K8738" src="images/products/KonlegaK8738.jpg"><p style="color: black;">Велотренажер Konlega K8738</p></a></li>
+    <li class="ant-carousel-element"><a href="elipsoidi/ProForm225.html"><img id="picture" alt="Аренда эллипсоида ProForm 225" src="images/products/ProForm225.jpg"><p style="color: black;">Эллипсоид ProForm 225</p></a></li>
+    <li class="ant-carousel-element"><a href="elipsoidi/KonlegaK8709.html"><img id="picture" alt="Аренда эллипсоида Konlega K8709" src="images/products/KonlegaK8709.jpg"><p style="color: black;">Эллипсоид Konlega K8709</p></a></li>
+    <li class="ant-carousel-element"><a href="elipsoidi/KonlegaK8731.html"><img id="picture" alt="Аренда эллипсоида Konlega K8731" src="images/products/KonlegaK8731.jpg"><p style="color: black;">Эллипсоид Konlega K8731</p></a></li>
+    <li class="ant-carousel-element"><a href="skamyi/DFC-SJ1005.html"><img id="picture" alt="Аренда гипперэкстензии DFC SJ1005" src="images/products/DFC-SJ1005.jpg"><p style="color: black;">Гипперэкстензия DFC SJ1005
 </p></a></li>
     </ul>
   </div>
@@ -124,25 +124,25 @@
 
 <div class="block">
 <a href="begovie_dorojki.html">
-  <img id="pictureInBlock" alt="Беговая дорожка ProForm Performance 600i" src="images/products/ProFormPerformance.jpg">
+  <img id="pictureInBlock" alt="Аренда беговой дорожки ProForm Performance 600i" src="images/products/ProFormPerformance.jpg">
   <p>Беговые дорожки</p></a>
 </div>
 
 <div class="block">
 <a href="velotrenajeri.html">
-  <img id="pictureInBlock" alt="Велотренажер KonlegaK8601" src="images/products/KonlegaK8601.jpg">
+  <img id="pictureInBlock" alt="Аренда велотренажера KonlegaK8601" src="images/products/KonlegaK8601.jpg">
   <p>Велотренажеры</p></a>
 </div>
 
 <div class="block">
 <a href="elipsoidi.html">
-  <img id="pictureInBlock" alt="Эллипсоид ProForm225" src="images/products/ProForm225.jpg">
+  <img id="pictureInBlock" alt="Аренда эллипсоида ProForm225" src="images/products/ProForm225.jpg">
   <p>Эллиптические тренажеры (элипсоиды)</p></a>
 </div>
 
 <div class="block">
 <a href="skamyi.html">
-  <img id="pictureInBlock" alt="Гипперэкстензия DFC SJ1005" src="images/products/DFC-SJ1005.jpg">
+  <img id="pictureInBlock" alt="Аренда гипперэкстензии DFC SJ1005" src="images/products/DFC-SJ1005.jpg">
   <p>Скамьи для жима, пресса и спины</p></a>
 </div>
 
@@ -157,7 +157,7 @@
 <a style="color: black;" href="delivery.html">&#149;<u>Доставка</u></a><br>
 <!--<a style="color: black;" href="">&#149;<u>Инструкции</u></a>-->
 </p>
-<img style="border-radius: 13px;" alt="велотренажер" id="pic6" src="images/bike.png">
+<img style="border-radius: 13px;" alt="Аренда велотренажера" id="pic6" src="images/bike.png">
 </div>
 
 
@@ -167,23 +167,23 @@
 <p id="ContentText2" style="text-align: center; float: left; padding-right: 2%; ">&#160;&#160;&#160;&#160;&#160;<u>Нет времени на посещение спортзала?</u></p>
 <p id="ContentText3" style="text-align: center; float: left; padding-right: 2%; ">С этой проблемой вам поможет справиться наш прокат спортивных тренажеров! В нашем прокате вы можете взять в аренду беговую дорожку, велотренажер, эллипсоид домой и заниматься дома, не тратя дополнительное время на поездку.
  </p>
-<img style="border-radius: 13px;" id="pic1" src="images/run.png">
+<img style="border-radius: 13px;" alt="Аренда беговой дорожки" id="pic1" src="images/run.png">
 </div>
 
 <!-- Блок 5 -->
 <div class="Line"> <h2>Социальные сети</h2> </div>
 <div class="content">
 <center>
-  <div class="socialnetwork">
-<a href="https://www.facebook.com/sportzaldomaby/" >
+<div class="socialnetwork">
+<a alt="Аренда спортивных тренажеров в facebook" href="https://www.facebook.com/sportzaldomaby/" >
 <img  src="images/facebook.png">
 <p style="text-align: center;"><u>Facebook</u></p> 
 </a>
-<a href="https://www.instagram.com/sportzaldoma.by/" >
+<a alt="Аренда спортивных тренажеров в instagram" href="https://www.instagram.com/sportzaldoma.by/" >
 <img  src="images/instagram.png">
 <p style="text-align: center;"><u>Instagram</u></p> 
 </a>
-<a href="https://vk.com/sportzaldomaby" >
+<a alt="Аренда спортивных тренажеров в вконтакте"  href="https://vk.com/sportzaldomaby" >
 <img src="images/vk.png" >
 <p style="text-align: center;"><u>Вконтакте</u></p> 
 </a>
