--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
 <div class="content">
 <center>
 <div class="socialnetwork">
-<a alt="Аренда спортивных тренажеров в facebook" href="https://www.facebook.com/sportzaldomaby/" >
+<a target="_blank" alt="Аренда спортивных тренажеров в facebook" href="https://www.facebook.com/sportzaldomaby/" >
 <img  src="images/facebook.png">
 <p style="text-align: center;"><u>Facebook</u></p> 
 </a>
-<a alt="Аренда спортивных тренажеров в instagram" href="https://www.instagram.com/sportzaldoma.by/" >
+<a target="_blank" alt="Аренда спортивных тренажеров в instagram" href="https://www.instagram.com/sportzaldoma.by/" >
 <img  src="images/instagram.png">
 <p style="text-align: center;"><u>Instagram</u></p> 
 </a>
-<a alt="Аренда спортивных тренажеров в вконтакте"  href="https://vk.com/sportzaldomaby" >
+<a target="_blank" alt="Аренда спортивных тренажеров в вконтакте"  href="https://vk.com/sportzaldomaby" >
 <img src="images/vk.png" >
 <p style="text-align: center;"><u>Вконтакте</u></p> 
 </a>
