--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -44,7 +44,7 @@
 <h2><a href="Products.html" id="Back">⬅Каталог</a></h2>
 <div class="block">
 <a href="elipsoidi/KonlegaK8709.html">
-  <img id="pictureInBlock" alt="Элиптический тренажер Konlega K8709" src="images/products/KonlegaK8709.jpg">
+  <img id="pictureInBlock" alt="Эллиптический тренажер Konlega K8709" src="images/products/KonlegaK8709.jpg">
   <p>Konlega K8709</p>
   <p>Цена за месяц: 55 руб.</p>
   <p>Цена за 2 месяца: 100 руб.</p>
@@ -53,7 +53,7 @@
 
 <div class="block">
 <a href="elipsoidi/ProForm225.html">
-  <img id="pictureInBlock" alt="Элиптический тренажер ProForm 225" src="images/products/ProForm225.jpg">
+  <img id="pictureInBlock" alt="Эллиптический тренажер ProForm 225" src="images/products/ProForm225.jpg">
   <p>ProForm 225</p>
   <p>Цена за месяц: 55 руб.</p>
   <p>Цена за 2 месяца: 100 руб.</p>
@@ -62,7 +62,7 @@
 
 <div class="block">
 <a href="elipsoidi/KonlegaK8731.html">
-  <img id="pictureInBlock" alt="Элиптический тренажер Konlega K8731" src="images/products/KonlegaK8731.jpg">
+  <img id="pictureInBlock" alt="Эллиптический тренажер Konlega K8731" src="images/products/KonlegaK8731.jpg">
   <p>Konlega K8731</p>
   <p>Цена за месяц: 70 руб.</p>
   <p>Цена за 2 месяца: 130 руб.</p>
