--- a/elipsoidi/KonlegaK8709.html
+++ b/elipsoidi/KonlegaK8709.html
@@ -44,12 +44,12 @@
  
  
   
-<div class="Line"> <h1>Элиптический тренажер Konlega K8709</h1> </div>
+<div class="Line"> <h1>Эллиптический тренажер Konlega K8709</h1> </div>
 <div class="content">
 
 <h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
 
-<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Элиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg">
+<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg">
 
 <!-- Карусель -->
 <script src="../Carousel2.js"></script>
@@ -57,11 +57,11 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Элиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Элиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-2.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Элиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-3.jpg"" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Элиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-4.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Элиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-5.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-2.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-3.jpg"" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-4.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-5.jpg" tabindex="0"></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
