--- a/elipsoidi/ProForm225.html
+++ b/elipsoidi/ProForm225.html
@@ -44,12 +44,12 @@
  
  
   
-<div class="Line"> <h1>Элиптический тренажер ProForm 225</h1> </div>
+<div class="Line"> <h1>Эллиптический тренажер ProForm 225</h1> </div>
 <div class="content">
 
 <h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
 
-<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Элиптический тренажер ProForm 225" src="../images/products/ProForm225.jpg">
+<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Эллиптический тренажер ProForm 225" src="../images/products/ProForm225.jpg">
 
 <!-- Карусель -->
 <script src="../Carousel2.js"></script>
@@ -57,8 +57,8 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Элиптический тренажер ProForm 225" src="../images/products/ProForm225.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Элиптический тренажер ProForm 225" src="../images/products/ProForm225_1.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер ProForm 225" src="../images/products/ProForm225.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер ProForm 225" src="../images/products/ProForm225_1.jpg" tabindex="0"></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
