--- a/Requisites.html
+++ b/Requisites.html
@@ -43,19 +43,17 @@
 <div class="content">
 
 <p>
-	
-&nbsp;<u>Владелец магазина:</u> Общество с ограниченной ответственностью "Вилпартс" <br>
-Свидетельство о регистрации №191605857, выдано 25.06.2012 года Минским городским исполнительным комитетом.<br>
-Внесены в реестр бытовых услуг <br>17 апреля 2020 г., регистрационный номер №000000084642.<br>
-Интернет-магазин зарегистрирован в Торговом реестре Республики Беларусь<br> 14 апреля 2020 г., регистрационный номер №479390.<br>
-<u>Реквизиты:</u> ООО "Вилпартс"  <br>
-<u>УНП:</u> 191605857 <br>
-<u>ОКПО:</u> 380526955000 <br>
-<u>Р/сч:</u>  BY14PJCB30120263011000000933 (формат IBAN)<br>
+&nbsp;<u>Владелец магазина:</u> ИП Дмитрук Михаил Михайлович <br>
+Свидетельство о регистрации №191219191, выдано 14.12.2009 года Минским городским исполнительным комитетом.<br>
+Интернет-магазин зарегистрирован в Торговом реестре Республики Беларусь 26 марта 2020 г., регистрационный номер №477870.<br>
+<u>Реквизиты:</u> ИП Дмитрук М.М. <br>
+<u>УНП:</u> 191219191 <br>
+<u>Р/сч:</u>  BY65PJCB30130168721000000933 (формат IBAN)<br>
 <u>Банк:</u> ЦБУ №102 ОАО «Приорбанк» код PJCBBY2X (BIC),<br>
 <u>Адрес банка:</u> г. Минск, Логойский тракт, д.15/1.<br>
 <u>Юридический адрес: </u>
-220125, Республика Беларусь, г. Минск, пр-т Независимости, д.177, пом. 3, комната 22<br>
+220114, Республика Беларусь, г. Минск, пр-т Независимости, д.125, кв. 137<br>
+
 <u>Телефоны:</u><br>
 тел./факс: +375 17 393-50-04;<br>
 A1  +375 (29) 195-90-90;<br>
