--- a/velotrenajeri.html
+++ b/velotrenajeri.html
@@ -47,7 +47,7 @@
   <p>Konlega K8516</p>
   <p>Цена за месяц: 40 руб.</p>
   <p>Цена за 2 месяца: 70 руб.</p>
-  <p>Цена за 3 месяца: 110 руб. +бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 120 руб. +бесплатная доставка</p></a>
 </div>
 
 <div class="block">
@@ -56,7 +56,7 @@
   <p>Konlega K8738</p>
   <p>Цена за месяц: 45 руб.</p>
   <p>Цена за 2 месяца: 80 руб.</p>
-  <p>Цена за 3 месяца: 125 руб. +бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 135 руб. +бесплатная доставка</p></a>
 </div>
 
 <div class="block">
@@ -65,7 +65,16 @@
   <p>Konlega K8601</p>
   <p>Цена за месяц: 45 руб.</p>
   <p>Цена за 2 месяца: 80 руб.</p>
-  <p>Цена за 3 месяца: 125 руб. +бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 135 руб. +бесплатная доставка</p></a>
+</div>
+
+<div class="block">
+<a href="velotrenajeri/SundaysFitnessK8718P.html">
+  <img id="pictureInBlock" alt="Велотренажер Sundays Fitness K8718P" src="images/products/Sundays-Fitness-K8718P-1.jpg">
+  <p>Sundays Fitness K8718P-7</p>
+  <p>Цена за месяц: 50 руб.</p>
+  <p>Цена за 2 месяца: 90 руб.</p>
+  <p>Цена за 3 месяца: 145 руб. +бесплатная доставка</p></a>
 </div>
 
 </div>
