--- a/velotrenajeri/KonlegaK8738.html
+++ b/velotrenajeri/KonlegaK8738.html
@@ -87,10 +87,13 @@
 </tr>
 <tr>
 <td>3 месяца</td>
-<td>125 руб. + бесплатная доставка</td>
+<td>135 руб. + бесплатная доставка</td>
 </tr>
 <tr>
 </table>
+<center>
+<h2><a href="../delivery.html" id="Back">Условия доставки</a></h2>
+</center>
 <center>
 <h2><a href="../delivery.html" id="Back">Условия доставки</a></h2>
 </center>
