--- a/velotrenajeri/SundaysFitnessK8718P.html
+++ b/velotrenajeri/SundaysFitnessK8718P.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="../style.css" media="screen">
   <link rel="stylesheet" href="../Carousel.css">
   
-  <title>ПРОКАТ ЭЛЛИПТИЧЕСКИХ ТРЕНАЖЕРОВ (ЭЛЛИПСОИДОВ) В МИНСКЕ</title>
-  <meta property="og:title" content="ПРОКАТ ЭЛЛИПТИЧЕСКИХ ТРЕНАЖЕРОВ (ЭЛЛИПСОИДОВ) В МИНСКЕ">
+  <title>ПРОКАТ ВЕЛОТРЕНАЖЕРОВ В МИНСКЕ</title>
+  <meta property="og:title" content="ПРОКАТ ВЕЛОТРЕНАЖЕРОВ В МИНСКЕ">
   <meta property="og:site_name" content="ПРОКАТ СПОРТИВНЫХ ТРЕНАЖЕРОВ В МИНСКЕ">
   <meta property="og:description" content="Мы занимаемся прокатом спортивных тренажеров в Минске. У нас вы можете взять в аренду беговую дорожку, эллипсоидный тренажер, велотренажер, а так же другие тренажеры. Доставка по Минску. Все тренажеры новые, модели последнего года.">
   <meta property="og:url" content="http://sportzaldoma.by/">
@@ -44,12 +44,12 @@
  
  
   
-<div class="Line"> <h1>Эллиптический тренажер ProForm 225</h1> </div>
+<div class="Line"> <h1>Велотренажер (Велоэргометр) Sundays Fitness K8718P-7</h1> </div>
 <div class="content">
 
-<h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
+<h2><a href="../velotrenajeri.html" id="Back">⬅Назад</a></h2>
 
-<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Эллиптический тренажер ProForm 225" src="../images/products/ProForm225.jpg">
+<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Велотренажер Sundays Fitness K8718P-7" src="../images/products/Sundays-Fitness-K8718P-1.jpg">
 
 <!-- Карусель -->
 <script src="../Carousel2.js"></script>
@@ -57,8 +57,8 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер ProForm 225" src="../images/products/ProForm225.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер ProForm 225" src="../images/products/ProForm225_1.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Велотренажер Konlega K8738" src="../images/products/Sundays-Fitness-K8718P-1.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Велотренажер Konlega K8738" src="../images/products/Sundays-Fitness-K8718P-2.jpg" tabindex="0"></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
@@ -75,38 +75,41 @@
 </tr>
 <tr>
 <td>1 месяц</td>
-<td>55 руб.</td>
+<td>50 руб.</td>
 </tr>
 <tr>
 <td>2 месяца</td>
-<td>100 руб.</td>
+<td>90 руб.</td>
 </tr>
 <tr>
 <td>3 месяца</td>
-<td>165 руб. + бесплатная доставка</td>
+<td>145 руб. + бесплатная доставка</td>
 </tr>
 <tr>
 </table>
-
+<center>
+<h2><a href="../delivery.html" id="Back">Условия доставки</a></h2>
+</center>
 <center>
 <h2><a href="../delivery.html" id="Back">Условия доставки</a></h2>
 </center>
 <h2 style="text-align: center;"><u>Описание</u></h2>
 <div style="width: 75%; margin: auto;">
 <p id="Description">
-<b><u>Компактный заднеприводный эллиптический тренажер.</u></b> Тренажеры с задним приводом считаются классическим вариантом, такие модели наиболее распространены. В них маховик и вся система сопротивления располагается позади тренирующегося.<br>
-<b><u>Нагрузка:</u></b> бесшумная электромагнитная система нагружения SMR Silent™, 12 уровней нагрузки.<br>
-Модели эллипсоидов с электромагнитной нагрузкой сопротивления отличаются повышенной плавностью хода, высокой скоростью вращения педалей.<br>
-<b><u>Длина шага:</u></b> 36 см.<br>
-Длина шага - это важная характеристика, на которую нужно обратить внимание при выборе эллипсоида.<br>
-Консоль: на дисплее отображаются скорость, время тренировки, дистанция, потраченные калории, пульс, а на удобной консоли размещены 8 встроенных программ тренировок.<br>
-<b><u>Комфорт:</u></b><br>
-&#149;<b>измерение пульса с помощью датчиках, которые встроены в рукоятки;</b><br>
-&#149;<b>встроенная звуковая система с возможностью подключения внешнего проигрывателя Intermix Acoustics;</b><br>
-&#149;<b>разъем для МР3-плеера;</b><br>
-&#149;<b>транспортировочные ролики;</b><br>
-&#149;<b>ниши для хранения мелких предметов;</b><br>
-&#149;<b>компенсаторы неровности пола.</b><br>
+<b><u>Велоэргометр Sundays K8718P-7</u></b> – практичный домашний тренажер с точной регулировкой нагрузки. Преимущества этой модели: компактные габариты, удобная посадка,<br>
+большое количество программ и уровней нагрузки. На цветном дисплее будет отображаться весь ход тренировок, время, пройденное расстояние, скорость, сколько сожжено калорий и мн. др.<br>
+Несмотря на компактные размеры, тренажер отличается высокой производительностью и качеством деталей.<br>
+За счет вертикальной регулировки высоты сиденья тренироваться на велотренажере могут пользователи разного роста.<br>
+Данная модель имеет возможность горизонтальной регулировки сиденья.<br>
+Руль отклоняется от себя/к себе. Пользователь может подобрать удобное положение для тренировки.<br> 
+<b><u>Показатели дисплея:</u></b><br>
+&#149;<b>затраченное время</b><br>
+&#149;<b>скорость</b><br>
+&#149;<b>расстояние</b><br>
+&#149;<b>сжигаемые калории</b><br>
+&#149;<b>одометр (показывает общее расстояние, "пройденное" тренажером)</b><br>
+&#149;<b>показания пульса</b><br>
+Полка для планшета/телефона позволяет прослушивать во время тренировки любимую музыку либо смотреть фильмы/сериалы.<br>
 </p>
 </div>
 
@@ -115,15 +118,14 @@
 <tr>
 <th colspan="2">Характеристики</th>
 </tr>
-<tr><td>Тип</td><td>электрический</td></tr>
-<tr><td>Ширина</td><td>64 см</td></tr>
-<tr><td>Высота</td><td>127 см</td></tr>
-<tr><td>Длина</td><td>160 см</td></tr>
-<tr><td>Длина шага макс</td><td>36 см</td></tr>
-<tr><td>Кол-во уровней нагрузки</td><td>12</td></tr>
-<tr><td>Кол-во программ</td><td>8</td></tr>
-<tr><td>Максимальная масса пользователя</td><td>115 кг</td></tr>
-<tr><td>Масса</td><td>45 кг</td></tr>
+<tr><td>Тип</td><td>электромагнитный</td></tr>
+<tr><td>Ширина</td><td>57.5 см</td></tr>
+<tr><td>Высота</td><td>150 см</td></tr>
+<tr><td>Длина</td><td>107 см</td></tr>
+<tr><td>Кол-во уровней нагрузки</td><td>16</td></tr>
+<tr><td>Маховик</td><td>6 кг</td></tr>
+<tr><td>Максимальная масса пользователя</td><td>120 кг</td></tr>
+<tr><td>Масса</td><td>34 кг</td></tr>
 </table>
 
 
@@ -133,6 +135,8 @@
   <script src="../footer.js"></script>
 </body>
 </html>
+
+
 
 
 
