--- a/velotrenajeri/SundaysFitnessK8718P.html
+++ b/velotrenajeri/SundaysFitnessK8718P.html
@@ -44,7 +44,7 @@
  
  
   
-<div class="Line"> <h1>Велотренажер (Велоэргометр) Sundays Fitness K8718P-7</h1> </div>
+<div class="Line"> <h1>Велотренажер Sundays Fitness K8718P-7</h1> </div>
 <div class="content">
 
 <h2><a href="../velotrenajeri.html" id="Back">⬅Назад</a></h2>
@@ -107,9 +107,7 @@
 &#149;<b>скорость</b><br>
 &#149;<b>расстояние</b><br>
 &#149;<b>сжигаемые калории</b><br>
-&#149;<b>одометр (показывает общее расстояние, "пройденное" тренажером)</b><br>
 &#149;<b>показания пульса</b><br>
-Полка для планшета/телефона позволяет прослушивать во время тренировки любимую музыку либо смотреть фильмы/сериалы.<br>
 </p>
 </div>
 
